--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,6 @@ dev_dependencies:
 flutter: 
   assets:
     - assets/logo/
-    - assets/icon/
+    - assets/images/
   uses-material-design: true
 
